--- a/css/style.css
+++ b/css/style.css
@@ -42,18 +42,18 @@ body {
 	}
 	.card:hover {
 		box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 1);
-	}
+			}
 	img {
 		border: 20px solid white;
 		border-radius: 50%;
 		margin-top: 8%;
 		margin-bottom: -15% !important;
 		width: 30%;
-	}
+			}
 	.name {
 		text-align: center;
 		font-size: 2.8em;
-		color: gainsboro;
+		color:#8b00ff;
 		margin-top: 15%;
 		margin-bottom: auto;
 		text-transform: capitalize;
@@ -127,7 +127,7 @@ body {
 		padding-left: 4px;
 		text-align: center;
 		font-size: 2.5em;
-		color: gainsboro;
+		color:#8b00ff;
 		margin-top: 16%;
 		margin-bottom: auto;
 		text-transform: capitalize;
@@ -195,7 +195,7 @@ body {
 		padding-left: 4px;
 		text-align: center;
 		font-size: 2.8em;
-		color: gainsboro;
+		color:#8b00ff;
 		margin-top: 16%;
 		margin-bottom: auto;
 		text-transform: capitalize;
